exo: Prevent client from changing widget bounds incorrectly.

This adds two more cases to UpdateWidgetBounds() where we return
early as the shell is managing the bounds of the widget:

1. When window is snapped.
2. When widget bounds are being animated.

Bug: 830016
Test: exo_unittests --gtest_filter=ShellSurfaceTest.CycleSnap
Test: Alt-[ works correctly for XDG shell clients.
Change-Id: I91ae8b7720ee8b525b1bafd98df9f524017fe4f9
Reviewed-on: https://chromium-review.googlesource.com/1001312
Commit-Queue: David Reveman <reveman@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549087}
Former-commit-id: 5020baea3c8279cca2d17bea4ab10364fc937222